tests/invalid/runtime/shift_range_int.pts
import Io;

function main() : void {
    int a = 1;
    int s = 64;
    int b = a << s;
    Io.printLine(b.toString());
}
